--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -298,7 +298,7 @@ f();
 이와 같이 에러가 발생하면 제어 흐름이 catch 블록으로 넘어간다.
 
 ### Promise.all()
-<img src='./promise_all.png' width='400px' />
+<img src='./img/promise_all.png' width='400px' />
 여러 개의 프라미스를 동시에 실행시키고 모든 프라미스가 준비될 때까지 기다린다.<br>
 여러 Promise의 결과를 집계할 때 유용하게 사용할 수 있다.<br>
 
