--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -1,8 +1,8 @@
 # 3장. 자바스크립트에서 비동기 처리 다루기
 
-## 동기, 비동기
+## 동기적 처리, 비동기적 처리
 <img src='./img/asynchronous.png' width='400px' />
-동기적: 요청을 받고 작업을 처리하는 동안 다른 요청을 멈춘다.
+동기적: 요청을 받고 작업을 처리하는 동안 다른 요청을 멈춘다.<br>
 비동기적: 하나의 작업과 동시에 다른 작업을 실행한다.
 
 ### callback
