--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -6,7 +6,7 @@
 비동기적: 하나의 작업과 동시에 다른 작업을 실행한다.
 
 ### callback
-자바스크립트의 고전적인 비동기적 프로그래밍 방식.
+자바스크립트의 고전적인 비동기적 프로그래밍 방식.<br>
 함수 타입의 값을 파라미터로 넘겨줘, 파라미터로 받은 함수를 특정 작업이 끝나고 호출
 
 ## 1. Promise
