--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -46,6 +46,14 @@ increaseAndPrint(0, (n) => {
 
 ```
 
+**Promise의 상태(state)**
+
+cf. 상태 = 프로미스의 처리과정
+
+- Pending(대기) : 이행하거나 거부되지 않은 초기 상태
+- Fulfilled(이행) : 이행하거나 거부되지 않은 초기 상태
+- Rejected(실패) : 연산이 실패하거나 오류가 발생한 상태
+
 
 
 **Promise는 성공할 수도, 실패할 수도 있음**
