--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -54,7 +54,7 @@ cf. 상태 = 프로미스의 처리과정
 - Fulfilled(이행) : 이행하거나 거부되지 않은 초기 상태
 - Rejected(실패) : 연산이 실패하거나 오류가 발생한 상태
 
-
+<img src='./img/promise_flow.jpg' width='1000px' />
 
 **Promise는 성공할 수도, 실패할 수도 있음**
 
