--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -51,7 +51,7 @@ increaseAndPrint(0, (n) => {
 cf. 상태 = 프로미스의 처리과정
 
 - Pending(대기) : 이행하거나 거부되지 않은 초기 상태
-- Fulfilled(이행) : 이행하거나 거부되지 않은 초기 상태
+- Fulfilled(이행) : 연산이 성공적으로 완료됨. 프로미스가 결과 값을 반환해준 상태
 - Rejected(실패) : 연산이 실패하거나 오류가 발생한 상태
 
 <img src='./img/promise_flow.jpg' width='1000px' />
