--- a/발표/2주차.md
+++ b/발표/2주차.md
@@ -127,7 +127,7 @@ myPromise
 
 
 
-**Promise로 코드의 깊이 길어지지 않게 하기**
+**Promise로 코드의 깊이 깊어지지 않게 하기**
 
 ```javascript
 function increaseAndPrint(n) {
@@ -381,6 +381,8 @@ process();
 가장 먼저 완료된 Promise가 실패한 경우, 실패로 간주한다.
 
 ### 참고
+https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Promise
+
 https://javascript.info/async-await
 
 https://ko.javascript.info/async-await
