--- a/2주차/황지수.md
+++ b/2주차/황지수.md
@@ -1,7 +1,6 @@
 ## 자바스크립트에서 비동기 처리 다루기
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5923d250-18b4-4fd9-851c-da008fa84dc1/Untitled.png)
-
+<img src='./img/황지수_1.png' width='400px' />
 ### 동기적으로 처리한다면?
 
 ⇒ 작업이 끝날 때까지 기다리는 동안 중지 상태 → 다른 작업 X, 작업이 끝나야 다음 작업 OK
@@ -44,7 +43,7 @@ console.log("다음 작업");
 
 **출력 결과**
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a6b59e97-e1a3-4451-9fca-066bc0149f8c/Untitled.png)
+<img src='./img/황지수_2.png' width='200px' />
 
 작업 시작 후 for 루프가 돌아가는 동안 그 다음 작업이 실행 for 루프가 끝난 이후에 (다음 작업 이후) 몇 ms 걸렸는지 표기
 
@@ -376,7 +375,7 @@ async function process() {
 process();
 ```
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b32d224c-5e59-4288-943d-a4d183930de6/Untitled.png)
+<img src='./img/황지수_3.png' />
 
 if) 배열 비구조화 할당 문법 사용 시, 결과값 따로 추출해서 조회 가능
 
