--- a/2주차/김채은.md
+++ b/2주차/김채은.md
@@ -33,7 +33,7 @@
         
         즉 순차적으로 A - B - C하나씩 처리한다.  이 함수의 반환 값 = 파일 내용
         
-        ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/edd7eba4-3c6a-4382-905b-5f889e62567a/Untitled.png)
+        <img src='./img/챈_1.png' />
         
         - 비동기적 처리
         
@@ -43,7 +43,7 @@
         
         readFile은 반환 값이 없어서 그냥 실행시키면 된다.
         
-        ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/9b5b1679-f90d-4ab9-a610-0cf634a94e6b/Untitled.png)
+        <img src='./img/챈_2.png' />
         
 2. 연산이 많은 작업
     - `setTimeout 이용`
@@ -71,7 +71,7 @@ console.log('다음 작업');
 
 - 결과
     
-    ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3eb50f5f-6098-48c2-b64a-2740048e6498/Untitled.png)
+    <img src='./img/챈_3.png' />
     
 
 작업이 시작 되고 나서, for 루프가 돌아가는 동안 다음 작업도 실행되고, for루프가 끝나고나서 몇ms걸렸는지 알려준다.
