--- a/2주차/김채은.md
+++ b/2주차/김채은.md
@@ -185,7 +185,7 @@ Promise.all([promise1, promise2])
 > async/await = ***에이싱크***/어웨잇 라고 읽는다
 > 
 
-- `awiat`
+- `await`
 
 then을 대신해서 await을 쓴다고 생각하면된다.
 
