--- a/2주차/곽내영.md
+++ b/2주차/곽내영.md
@@ -1,6 +1,6 @@
 # 3장. 자바스크립트에서 비동기 처리 다루기
 
-<img src='./img/이미지이름.png' />
+<img src='./img/황지수1.png' />
 
 만약 작업을 동기적으로 처리한다면 작업이 끝날 때까지 기다리는 동안 중지 상태가 되기 때문에 다른 작업을 할 수 없다. 그리고 작업이 끝나야 비로소 그 다음 예정된 작업을 할 수 있다. 하지만 이를 비동기적으로 처리를 한다면 흐름이 멈추지 않기 때문에 동시에 여러 가지 작업을 처리할 수도 있고, 기다리는 과정에서 다른 함수도 호출할 수 있다.
 
