--- a/2주차/도수빈.md
+++ b/2주차/도수빈.md
@@ -8,6 +8,163 @@
 
 ### 3.1 Promise
 
+비동기 작업을 편하게 처리하기 위해 ES6에 도입된 기능
+
+콜백 함수로 비동기 작업을 처리할 때 코드가 난잡해지는 점을 개선 가능
+
+
+
+- Callback Hell(콜백지옥) 
+
+  비동기적으로 처리해야하는 일이 많아져, 코드의 깊이가 계속 깊어지는 현상
+
+```javascript
+function increaseAndPrint(n, callback) {
+  setTimeout(() => {
+    const increased = n + 1;
+    console.log(increased);
+    if (callback) {
+      callback(increased);
+    }
+  }, 1000);
+}
+
+increaseAndPrint(0, (n) => {
+  increaseAndPrint(n, (n) => {
+    increaseAndPrint(n, (n) => {
+      increaseAndPrint(n, (n) => {
+        increaseAndPrint(n, (n) => {
+          console.log("끝!");
+        });
+      });
+    });
+  });
+});
+
+```
+
+**Promise의 상태(state)**
+
+cf. 상태 = 프로미스의 처리과정
+
+- Pending(대기) : 이행하거나 거부되지 않은 초기 상태
+- Fulfilled(이행) : 연산이 성공적으로 완료됨. 프로미스가 결과 값을 반환해준 상태
+- Rejected(실패) : 연산이 실패하거나 오류가 발생한 상태
+
+<img src='./img/promise_flow.jpg' width='1000px' />
+
+**Promise는 성공할 수도, 실패할 수도 있음**
+
+- 성공 시 resolve 호출하기
+- 실패 시 reject 호출하기
+
+
+
+구현방법
+
+```javascript
+const myPromise = new Promise((resolve, reject)) => {
+	//구현..
+}
+```
+
+
+
+**성공시키는 상황**
+
+- resolve 호출 시 특정 값을 파라미터로 넣어주면, 그 값을 작업이 끝난 후 사용 가능
+
+- 작업 종료 후 또 다른 작업 해야할 때 Promise 뒤에 .then(...)을 붙여서 사용
+
+  
+
+EX1) 1초 뒤 성공시키는 상황 구현
+
+```javascript
+const myPromise = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    resolve(1);
+  }, 1000);
+});
+
+myPromise.then((n) => {
+  console.log(n);
+});
+
+```
+
+
+
+**실패하는 상황**
+
+- reject를 사용
+
+- .catch를 통해 실패 시 수행 할 작업 설정 가능
+
+  
+
+EX2) 1초 뒤 실패하는 상황 구현
+
+```javascript
+const myPromise = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    reject(new Error());
+  }, 1000);
+});
+
+myPromise
+  .then((n) => {
+    console.log(n);
+  })
+  .catch((error) => {
+    console.log(error);
+  });
+
+```
+
+
+
+**Promise로 코드의 깊이 깊어지지 않게 하기**
+
+```javascript
+function increaseAndPrint(n) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      const value = n + 1;
+      if (value === 5) {
+        const error = new Error();
+        error.name = "ValueIsFiveError";
+        reject(error);
+        return;
+      }
+      console.log(value);
+      resolve(value);
+    }, 1000);
+  });
+}
+
+increaseAndPrint(0)
+  .then((n) => {
+    return increaseAndPrint(n);
+  })
+  .then((n) => {
+    return increaseAndPrint(n);
+  })
+  .then((n) => {
+    return increaseAndPrint(n);
+  })
+  .then((n) => {
+    return increaseAndPrint(n);
+  })
+  .then((n) => {
+    return increaseAndPrint(n);
+  })
+  .catch((e) => {
+    console.error(e);
+  });
+
+```
+
 ```javascript
 function increaseAndPrint(n) {
   return new Promise((resolve, reject) => {
