--- a/2주차/도수빈.md
+++ b/2주차/도수빈.md
@@ -51,7 +51,7 @@ cf. 상태 = 프로미스의 처리과정
 - Fulfilled(이행) : 연산이 성공적으로 완료됨. 프로미스가 결과 값을 반환해준 상태
 - Rejected(실패) : 연산이 실패하거나 오류가 발생한 상태
 
-<img src='./img/promise_flow.jpg' width='1000px' />
+<img src='../발표/img/promise_flow.jpg' width='1000px' />
 
 **Promise는 성공할 수도, 실패할 수도 있음**
 
