--- a/3주차/이준석.md
+++ b/3주차/이준석.md
@@ -36,3 +36,60 @@ a.onclick = () => {
 };
 
 ```
+### 4.2 모달
+
+<img src='./img/이준석_모달.png'/>
+기존 페이지의 내용 위로 올라오는 메세지 박스 같은 형태의 UI<br>
+
+```javascript
+const open = document.getElementById("open");
+const close = document.getElementById("close");
+const modal = document.querySelector(".modal-wrapper");
+// id가 아니라 class를 DOM으로 선택하고 싶을 떄 quertSelector를 사용
+
+open.onclick = () = {
+	modal.style.display = "flex";
+};
+
+close.onclick = () = {
+	modal.style.display = "none";
+};
+```
+
+## 1장
+
+### 1.1 핵심 개념 이해하기
+
+내용 placeholder
+
+### 1.2 서버로서의 노드
+
+내용 placeholder
+
+### 1.3 서버 외의 노드
+
+내용 placeholder
+
+### 1.4 개발 환경 설정하기
+
+내용 placeholder
+
+### 1.5 함께 보면 좋은 자료
+
+내용 placeholder
+
+## 3장
+
+### 3.1 REPL 사용하기
+
+내용 placeholder
+
+### 3.2 JS 파일 실행하기
+
+내용 placeholder
+
+### 3.3 모듈로 만들기
+
+내용 placeholder
+
+------
