--- a/발표/3주차.md
+++ b/발표/3주차.md
@@ -9,12 +9,12 @@
 - 프로세스는 운영체제에서 할당하는 작업의 단위이다. 노드나 웹 브라우저 같은 프로그램은 개별적인 프로세스이다. 프로세스 간에는 메모리 등의 자원을 공유하지 않는다.
 - 스레드는 프로세스 내에서 실행되는 흐름의 단위이다. 프로세서는 스레드를 여러 개 생성해 여러 작업을 동시에 처리할 수 있다. 스레드들은 부모 프로세스의 자원을 공유한다. 같은 주소의 메모리에 접근 가능하므로 데이터를 공유할 수 있다.
 
-<img src='./img/노드장단점.jpeg' width='400px' />
+<img src='./img/js0301.jpeg' width='400px' />
 노드가 싱글 스레드라는 말을 들어봤을 것이다. 하지만 엄밀히 말하면 싱글 스레드로 동작하지는 않는다. 노드를 실행하면 먼저 프로세스가 하나 생성된다. 그리고 그 프로세스에서 스레드들을 생성하는데, 이때 내부적으로 스레드를 여러 개 생성한다. 그중에서 직접 제어할 수 있는 스레드는 하나뿐이다. 그래서 흔히 노드가 싱글 스레드라고 여겨지는 것이다.
 
 # **1.2 서버로서의 노드**
 
-<img src='./img/노드장단점.jpeg' width='600px' />
+<img src='./img/js0302.jpeg' width='600px' />
 
 → 노드 사용자들이 말하는 가장 큰 장점은 언어로 자바스크립트를 사용한다는 것이다. 웹 브라우저도 자바스크립트를 사용하므로 서버까지 노드를 사용하면 하나의 언어로 웹 사이트를 개발할 수 있다. 이로써 개발 생산성을 획기적으로 높였고, 생산성이 중요한 기업이 노드를 채택하는 이유가 되었다. 
 
@@ -34,6 +34,7 @@ $ node
 - REPL은 한두 줄짜리 코드를 테스트해보는 용도로는 좋지만 여러 중의 코드를 실행하기에는 불편하다.
 - 긴 코드인 경우에는 코드를 자바스크립트 파일로 만든 후 파일을 통째로 실행하는 것이 좋다.
 
+
 # 3.2 JS 파일 실행하기
 
 - 콘솔에서 node [자바스크립트 파일 경로]로 실행한다. (확장자 .js 는 생략해도 된다.)
@@ -41,6 +42,7 @@ $ node
 **<파일/폴더 이름 제한>**
 
 파일이나 폴더의 이름에 쓸 수 없는 문자들이 있다. 대표적으로, /, \, |, <, >, :, ", ?, * 등이 있다. 파일이나 폴더를 만들 때 위 문자들은 피해서 이름짓자.
+
 
 # 3.3 모듈로 만들기
 
