이준석.md 완료

--- a/3주차/이준석.md
+++ b/3주차/이준석.md
@@ -1,51 +1,51 @@
-# 3ì£¼ì°¨ JS ìŠ¤í„°ë”” ì •ë¦¬
+# 3ÁÖÂ÷ JS ½ºÅÍµð Á¤¸®
 
-| ìž¥   | ì œëª©          |
+| Àå   | Á¦¸ñ          |
 | ---- | ------------- |
-| 4ìž¥ | HTMLê³¼ JavaScript ì—°ë™í•˜ê¸° |
-| ì±… 1ìž¥ | ë…¸ë“œ ì‹œìž‘í•˜ê¸° |
-| ì±… 3ìž¥ | ë…¸ë“œ ê¸°ëŠ¥ |
+| 4Àå | HTML°ú JavaScript ¿¬µ¿ÇÏ±â |
+| Ã¥ 1Àå | ³ëµå ½ÃÀÛÇÏ±â |
+| Ã¥ 3Àå | ³ëµå ±â´É |
 
-## 4ìž¥
+## 4Àå
 
-HTMLì„ ì‚¬ìš©í•˜ì—¬ ë³´ì—¬ì£¼ê³  ì‹¶ì€ UIë¥¼ ë³´ì—¬ì¤€ë‹¤.<br>
-ì´ ë•Œ ë™ì ìœ¼ë¡œ UIë¥¼ ì—…ë°ì´íŠ¸í•˜ê³  ì‹¶ë‹¤ë©´ JSë¥¼ ì—°ë™í•œë‹¤.
+HTMLÀ» »ç¿ëÇÏ¿© º¸¿©ÁÖ°í ½ÍÀº UI¸¦ º¸¿©ÁØ´Ù.
+ÀÌ ¶§ µ¿ÀûÀ¸·Î UI¸¦ ¾÷µ¥ÀÌÆ®ÇÏ°í ½Í´Ù¸é JS¸¦ ¿¬µ¿ÇÑ´Ù.
 
-### 4.1 ì¹´ìš´í„°
+### 4.1 Ä«¿îÅÍ
 
-ë²„íŠ¼ì„ í´ë¦­í•˜ë©´ ìˆ«ìžê°€ ì˜¬ë¼ê°€ê±°ë‚˜ ë‚´ë ¤ê°€ëŠ” ì¹´ìš´í„°
+¹öÆ°À» Å¬¸¯ÇÏ¸é ¼ýÀÚ°¡ ¿Ã¶ó°¡°Å³ª ³»·Á°¡´Â Ä«¿îÅÍ
 ```javascript
-<íƒœê·¸ id = "ì´ë¦„">ì‚¬ìš©ìž</íƒœê·¸>
-// íƒœê·¸ì— id ê°’ì„ ì„¤ì •í•´ì£¼ë©´ JSì—ì„œ í•´ë‹¹ DOMì— ì ‘ê·¼ì´ ê°€ëŠ¥
+<ÅÂ±× id = "ÀÌ¸§">»ç¿ëÀÚ</ÅÂ±×>
+// ÅÂ±×¿¡ id °ªÀ» ¼³Á¤ÇØÁÖ¸é JS¿¡¼­ ÇØ´ç DOM¿¡ Á¢±ÙÀÌ °¡´É
 ```
 
-DOM ì„ íƒí•˜ê¸°
+DOM ¼±ÅÃÇÏ±â
 ```javascript
-const name = document.getElementById("ì´ë¦„");
-console.log(name.innerText) // ì´ë¦„ì˜ ë‚´ìš©
+const name = document.getElementById("ÀÌ¸§");
+console.log(name.innerText) // ÀÌ¸§ÀÇ ³»¿ë
 
-ì´ë¦„.offsetTop // Topì˜ ìœ„ì¹˜
+ÀÌ¸§.offsetTop // TopÀÇ À§Ä¡
 ```
 
-ì´ë²¤íŠ¸ ì„¤ì •í•˜ê¸°
+ÀÌº¥Æ® ¼³Á¤ÇÏ±â
 ```javascript
 const a = documet.getElementById("aaa");
 
 a.onclick = () => {
-	console.log("aê°€ í´ë¦­ë¨");
+	console.log("a°¡ Å¬¸¯µÊ");
 };
 
 ```
-### 4.2 ëª¨ë‹¬
+### 4.2 ¸ð´Þ
 
-<img src='./img/ì´ì¤€ì„_ëª¨ë‹¬.png'/>
-ê¸°ì¡´ íŽ˜ì´ì§€ì˜ ë‚´ìš© ìœ„ë¡œ ì˜¬ë¼ì˜¤ëŠ” ë©”ì„¸ì§€ ë°•ìŠ¤ ê°™ì€ í˜•íƒœì˜ UI<br>
+<img src='./img/ÀÌÁØ¼®_¸ð´Þ.png' width='400px' />
+±âÁ¸ ÆäÀÌÁöÀÇ ³»¿ë À§·Î ¿Ã¶ó¿À´Â ¸Þ¼¼Áö ¹Ú½º °°Àº ÇüÅÂÀÇ UI<br>
 
 ```javascript
 const open = document.getElementById("open");
 const close = document.getElementById("close");
 const modal = document.querySelector(".modal-wrapper");
-// idê°€ ì•„ë‹ˆë¼ classë¥¼ DOMìœ¼ë¡œ ì„ íƒí•˜ê³  ì‹¶ì„ ë–„ quertSelectorë¥¼ ì‚¬ìš©
+// id°¡ ¾Æ´Ï¶ó class¸¦ DOMÀ¸·Î ¼±ÅÃÇÏ°í ½ÍÀ» ‹š quertSelector¸¦ »ç¿ë
 
 open.onclick = () = {
 	modal.style.display = "flex";
@@ -56,40 +56,102 @@ close.onclick = () = {
 };
 ```
 
-## 1ìž¥
+## 1Àå
 
-### 1.1 í•µì‹¬ ê°œë… ì´í•´í•˜ê¸°
+### 1.1 ÇÙ½É °³³ä ÀÌÇØÇÏ±â
 
-ë‚´ìš© placeholder
+Node.js´Â Chrome V8 Javascript ¿£ÁøÀ¸·Î ºôµåµÈ Javascript ·±Å¸ÀÓÀÌ´Ù.
 
-### 1.2 ì„œë²„ë¡œì„œì˜ ë…¸ë“œ
+- ³ëµå´Â ¼­¹ö ¾îÇÃ¸®ÄÉÀÌ¼ÇÀ» »ç¿ëÇÏ´Âµ¥ °¡Àå ¸¹ÀÌ »ç¿ëµÈ´Ù.
+- ¼­¹ö´Â Å¬¶óÀÌ¾ðÆ®ÀÇ ¿äÃ»¿¡ ÀÀ´äÇÑ´Ù. ¶ÇÇÑ ´Ù¸¥ ¼­¹ö·Î ¿äÃ»À» º¸³¾ ¼öµµ ÀÖ´Ù.
+- À¥ÀÌ³ª ¾ÛÀ» »ç¿ëÇÒ ¶§ »ç¿ëÀÚÀÇ µ¥ÀÌÅÍ¿Í ¼­ºñ½ºÀÇ µ¥ÀÌÅÍ°¡ »ý¼ºµÇ¸é, ÀÌ¸¦ ÀúÀåÇÏ°í ´Ù½Ã ÀúÀåµÈ °ÍÀ» ¹Þ¾Æ¿À´Â °÷ÀÌ ¼­¹öÀÌ´Ù.<br>
+- ³ëµå´Â ÀÚ¹Ù½ºÅ©¸³Æ® ÇÁ·Î±×·¥ÀÌ ¼­¹ö·Î¼­ ±â´ÉÇÏ±â À§ÇÑ µµ±¸¸¦ Á¦°øÇÏ´Âµ¥, ¾Õ¿¡¼­ Node.js¸¦ Chrome V8 JS ¿£ÁøÀ¸·Î ºôµåµÈ JS ·±Å¸ÀÓÀÌ¶ó Çß¾ú´Ù.
+- ·±Å¸ÀÓÀº Æ¯Á¤ ¾ð¾î·Î ¸¸µç ÇÁ·Î±×·¥µéÀ» ½ÇÇàÇÒ ¼ö ÀÖ°Ô ÇÏ´Â È¯°æÀ» ¶æÇÏ°í
+- ½±°Ô ¸»ÇØ ³ëµå´Â ÀÚ¹Ù½ºÅ©¸³Æ® ½ÇÇà±âÀÌ´Ù.<br>
 
-ë‚´ìš© placeholder
+ÀÌº¥Æ® ±â¹Ý
+- ÀÌº¥Æ® ±â¹ÝÀº ¾î¶² ÀÌº¥Æ®°¡ ¹ß»ýÇßÀ» ¶§ ¹Ì¸® ÁöÁ¤ÇØµÐ ÀÛ¾÷À» ¼öÇàÇÏ´Â °ÍÀ» ÀÇ¹ÌÇÑ´Ù.
+- ¿©·¯ ÀÌº¥Æ®°¡ µ¿½Ã¿¡ ¹ß»ýÇßÀ» ¶§´Â ¾î¶² ¼ø¼­·Î ÄÝ¹éÇÏ¼ö¸¦ È£ÃâÇÒÁö ÀÌº¥Æ® ·çÇÁ°¡ ÆÇ´ÜÇÑ´Ù.<br>
 
-### 1.3 ì„œë²„ ì™¸ì˜ ë…¸ë“œ
+<img src='./img/ÀÌÁØ¼®_ÀÌº¥Æ®·çÇÁ.png' width='400px' />
 
-ë‚´ìš© placeholder
+³íºí·ÎÅ· I/O
+¿À·¡ °É¸®´Â ÇÔ¼ö¸¦ ¹é±×¶ó¿îµå·Î º¸³», ´ÙÀ½ ÄÚµå¸¦ ¸ÕÀú ½ÇÇà½ÃÅ°°í, ³ªÁß¿¡ ¿À·¡°É¸®´Â ÇÔ¼ö¸¦ ½ÇÇà
 
-### 1.4 ê°œë°œ í™˜ê²½ ì„¤ì •í•˜ê¸°
+<img src='./img/ÀÌÁØ¼®_³íºí·ÎÅ·.png' width='400px' />
 
-ë‚´ìš© placeholder
+ÇÁ·Î¼¼½º ¿Í ½º·¹µå
+- ÇÁ·Î¼¼½º: ¿î¿µÃ¼Á¦¿¡¼­ ÇÒ´çÇÏ´Â ÀÛ¾÷ÀÇ ´ÜÀ§, ÇÁ·Î¼¼½º °£ ÀÚ¿ø °øÀ¯ ¾øÀ½
+- ½º·¹µå: ÇÁ·Î¼¼½º ³»¿¡¼­ ½ÇÇàµÇ´Â ÀÛ¾÷ÀÇ ´ÜÀ§, ºÎ¸ð ÇÁ·Î¼¼½º ÀÚ¿ø °øÀ¯
 
-### 1.5 í•¨ê»˜ ë³´ë©´ ì¢‹ì€ ìžë£Œ
+<img src='./img/ÀÌÁØ¼®_ÇÁ·Î¼¼½º.png' width='400px' />
 
-ë‚´ìš© placeholder
+½Ì±Û ½º·¹µå: ÁÖ¾îÁø ÀÏÀ» ÇÏ³ª ¹Û¿¡ Ã³¸® ¸øÇÔ
+-> ºí·ÎÅ·ÀÌ ¹ß»ýÇÏ´Â °æ¿ì ³ª¸ÓÁö ÀÛ¾÷Àº ´ë±â -> ºñÈ¿À² ¹ß»ý
+-> ³íºí·ÎÅ·À» »ç¿ëÇØ ÀÏºÎ ÄÚµå¸¦ ¹é±×¶ó¿îµå¿¡¼­ ½ÇÇà °¡´É
 
-## 3ìž¥
+### 1.2 ¼­¹ö·Î¼­ÀÇ ³ëµå
 
-### 3.1 REPL ì‚¬ìš©í•˜ê¸°
+³ëµå´Â ¼­¹ö°¡ ¾Æ´ÏÁö¸¸, ¼­¹ö¸¦ ±¸¼ºÇÒ ¼ö ÀÖ°Ô ÇÏ´Â ¸ðµâÀ» Á¦°øÇÑ´Ù.
 
-ë‚´ìš© placeholder
+### 1.3 ¼­¹ö ¿ÜÀÇ ³ëµå
 
-### 3.2 JS íŒŒì¼ ì‹¤í–‰í•˜ê¸°
+¶ÇÇÑ, ÀÚ¹Ù½ºÅ©¸³Æ® ·±Å¸ÀÓÀÌ±â ¶§¹®¿¡ ¿ëµµ°¡ ¼­¹ö¿¡¸¸ ÇÑÁ¤µÇÁö ¾ÊÀ½
+À¥, ¸ð¹ÙÀÏ, µ¥½ºÅ©Å¾ ¾Û¿¡¼­µµ »ç¿ë, ¿©±â¼­ ÇÁ·¹ÀÓ¿öÅ©°¡ ³ëµå ±â¹ÝÀ¸·Î µ¿ÀÛÇÔ
 
-ë‚´ìš© placeholder
+## 3Àå
 
-### 3.3 ëª¨ë“ˆë¡œ ë§Œë“¤ê¸°
+### 3.1 REPL »ç¿ëÇÏ±â
 
-ë‚´ìš© placeholder
+ÀÚ¹Ù½ºÅ©¸³Æ®´Â ½ºÅ©¸³Æ® ¾ð¾îÀÌ±â ¶§¹®¿¡ Áï¼®¿¡¼­ ÄÚµå¸¦ ½ÇÇàÇÒ ¼ö ÀÖ´Ù.
+- REPL ÀÌ¶ó´Â ÄÜ¼ÖÀ» Á¦°øÇÔ
+- Read Evaluate Print Loop
+- ÀÔ·ÂÇÑ °á°ú°ªÀÌ ¹Ù·Î Ãâ·ÂµÊ
+- °£´ÜÇÑ ÄÚµå¸¦ ÀÔ·ÂÇÏ±â¿¡ ÀûÇÕ
+
+```shell
+> console.log('hello world, hello node');
+hello world, hello node
+```
+
+### 3.2 JS ÆÄÀÏ ½ÇÇàÇÏ±â
+
+ÀÚ¹Ù½ºÅ©¸³Æ® ÆÄÀÏÀ» ¸¸µé¾î ÅëÂ°·Î ÄÚµå¸¦ ½ÇÇàÇÏ´Â ¹æ¹ý
+- xxx.js ÆÄÀÏÀ» ¸¸µç´Ù.
+- node [ÀÚ¹Ù½ºÅ©¸³Æ® ÆÄÀÏ °æ·Î]·Î ½ÇÇàÇÑ´Ù.
+- ½ÇÇà °á°ú °ªÀÌ Ãâ·ÂµÈ´Ù.
+
+### 3.3 ¸ðµâ·Î ¸¸µé±â
+
+³ëµå´Â ÀÚ¹Ù½ºÅ©¸³Æ® ÄÚµå¸¦ ¸ðµâ·Î ¸¸µé ¼ö ÀÖ´Ù.
+- ¸ðµâ: Æ¯Á¤ÇÑ ±â´ÉÀ» ÇÏ´Â ÇÔ¼ö³ª º¯¼öµéÀÇ ÁýÇÕ
+- ¸ðµâ·Î ¸¸µé¸é ¿©·¯ ÇÁ·Î±×·¥¿¡¼­ Àç»ç¿ë °¡´ÉÇÏ´Ù.
+
+<img src='./img/ÀÌÁØ¼®_¸ðµâ.png' width='400px' />
+
+°°Àº Æú´õ³»¿¡ ¿©·¯°³ÀÇ ¸ðµâÀ» ¸¸µé·Á¸é
+- ÆÄÀÏ ³¡¿¡ module.exports = xxx À» ºÙ¿©ÁØ´Ù.
+- ´Ù¸¥ ÆÄÀÏ¿¡¼­ requireÇÒ °æ¿ì ±× ¸ðµâÀÇ ³»¿ëÀ» °¡Á®¿Â´Ù.
+
+var.js
+```javascript
+const odd = 'oddNum';
+
+module.exports = {
+	odd,
+};
+```
+
+var.js¸¦ °¡Á®¿À´Â func.js
+```javascript
+const odd = require('./var');
+
+function a(){
+	return odd;
+}
+
+a();
+
+```
 
 ------
