--- a/발표/3주차.md
+++ b/발표/3주차.md
@@ -235,8 +235,9 @@ close.onclick = () => {
 
 - **런타임** : 특정 언어로 만든 프로그램들을 실행할 수 있게 해주는 환경
 - **노드** : 자바스크립트 실행기
+- 기존에는 Javascript를 웹브라우저 위에서만 실행할 수 있었음
 - 노드 이전에도 자바스크립트 런타임을 만들기 위한 많은 시도가 있었지만, `엔진 속도 문제`로 실패
-- 노드 이후 Javascript는 html과 브라우저에 대한 종속성으로부터 벗어남
+
 
 
 **노드 내부 구조**
