--- a/발표/3주차.md
+++ b/발표/3주차.md
@@ -243,7 +243,7 @@ close.onclick = () => {
 **노드 내부 구조**
 
 <img src='./img/4.png'/>
-- **libuv :** 노드의 특성인 `이벤트 기반`, `논 블로킹 I/O` 모델을 구현하고 있다.
+- **libuv** : 노드의 특성인 `이벤트 기반`, `논 블로킹 I/O` 모델을 구현하고 있다.
 
 ### 1.1.3 이벤트 기반
 
