--- a/3주차/양준혁.md
+++ b/3주차/양준혁.md
@@ -10,11 +10,62 @@
 
 ### 4.1 카운터
 
-내용 placeholder
+1) html을 이용하여 카운터를 만들어본다.
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
+
+  <body>
+    <h2 id="number">0</h2>
+    <div>
+      <button id="increase">+1</button>
+      <button id="decrease">-1</button>
+    </div>
+
+    <script src="src/index.js"></script>
+  </body>
+</html>
+```
+
+- body에 헤더와 버튼 2개가 있고, id를 지정해주었다
+
+2) DOM(Document Object Model) 선택하기
+
+```js
+const object = document.getElementById("elementID");
+```
+
+- 반환값은 Element 객체이다. https://developer.mozilla.org/en-US/docs/Web/API/Element
+
+
+3) 이벤트 설정하기
+
+```js
+const number = document.getElementById("number");
+object1.onclick = () => {
+  console.log("object1 클릭됨");
+  const current = parseInt(number.innerText, 10); //param1을 10진수로 변환
+  number.innerText = current + 1;
+};
+
+object2.onclick = () => {
+  console.log("object2  클릭됨");
+  const current = parseInt(number.innerText, 10);
+  number.innerText = current - 1;
+};
+```
+
+- object가 클릭시 값을 바꿔주는 이벤트를 생성할 수 있다.
+
 
 ### 4.2 모달
 
-내용 placeholder
+![image](https://user-images.githubusercontent.com/42092864/136191118-4467a60b-0e6a-4592-a803-88bdb7ea9599.png)
+
 
 ## 1장
 
