--- a/3주차/양준혁.md
+++ b/3주차/양준혁.md
@@ -31,7 +31,7 @@
 </html>
 ```
 
-- body에 헤더와 버튼 2개가 있고, id를 지정해주었다
+... body에 헤더와 버튼 2개가 있고, id를 지정해주었다
 
 2) DOM(Document Object Model) 선택하기
 
@@ -39,7 +39,7 @@
 const object = document.getElementById("elementID");
 ```
 
-- 반환값은 Element 객체이다. https://developer.mozilla.org/en-US/docs/Web/API/Element
+... 반환값은 Element 객체이다. https://developer.mozilla.org/en-US/docs/Web/API/Element
 
 
 3) 이벤트 설정하기
@@ -59,7 +59,7 @@ object2.onclick = () => {
 };
 ```
 
-- object가 클릭시 값을 바꿔주는 이벤트를 생성할 수 있다.
+... object가 클릭시 값을 바꿔주는 이벤트를 생성할 수 있다.
 
 
 ### 4.2 모달
@@ -67,6 +67,50 @@ object2.onclick = () => {
 ![image](https://user-images.githubusercontent.com/42092864/136191118-4467a60b-0e6a-4592-a803-88bdb7ea9599.png)
 
 
+:suspect: \*sus\*
+1) html을 이용하여 모달을 만들어본다
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
+
+  <body>
+    <h1>안녕하세요!</h1>
+    <p>내용내용내용</p>
+    <button id="open">버튼 열기</button>
+    <div class="modal-wrapper" style="display: none;">
+      <div class="modal">
+        <div class="modal-title">안녕하세요</div>
+        <p>모달 내용은 어쩌고 저쩌고..</p>
+        <div class="close-wrapper">
+          <button id="close">닫기</button>
+        </div>
+      </div>
+    </div>
+    <script src="src/index.js"></script>
+  </body>
+</html>
+```
+
+2) css와 js를 설정해준다
+
+```js
+const open = document.getElementById("open");
+const close = document.getElementById("close");
+const modal = document.querySelector(".modal-wrapper");
+open.onclick = () => {
+  modal.style.display = "flex";
+};
+close.onclick = () => {
+  modal.style.display = "none";
+};
+```
+![image](https://user-images.githubusercontent.com/42092864/136193214-a8a96165-49ca-4230-963e-354699439901.png)
+
+ 모달도 완성!
 ## 1장
 
 ### 1.1 핵심 개념 이해하기
