--- a/발표/3주차.md
+++ b/발표/3주차.md
@@ -42,9 +42,10 @@
 <img src='./img/1.JPG'/>
 
 
-### DOM 이란?
+### DOM(Document Object Model) 이란?
 
-  각 태그에 대한 정보를 지니고 있는 JavaScript 객체
+  * 각 태그에 대한 정보를 지니고 있는 JavaScript 객체
+  * HTML 문서의 내용과 구조가 객체 모델로 변화되어 다양한 프로그램에서 사용될 수 있다
 
 
 ### DOM 선택하기
