--- a/3주차/양준혁.md
+++ b/3주차/양준혁.md
@@ -115,34 +115,85 @@ close.onclick = () => {
 
 ### 1.1 핵심 개념 이해하기
 
-내용 placeholder
+#### Node.js는 Chrome v8 Javascript 엔진으로 빌드된 Javascript 런타임입니다.  
 
-### 1.2 서버로서의 노드
+1) 서버란?  
+ - 네트워크를 통해 클라이언트에 정보나 서비스를 제공하는 컴퓨터/프로그램  
+   
 
-내용 placeholder
+2) 자바스크립트 *_런타임_*  
+ - 런타임 : 특정 언어로 만든 프로그램들을 실행할 수 있는 "환경"   
+
+```노드는 "자바스크립트"라는 언어로 만든 프로램들을 실행 할 수 있는 "환경" 이구나!  ```
+
+3) 노드는 이벤트 기반으로 동작   
+ - 이벤트 기반 : 이벤트가 발생할 때 미리 지정해둔 작업을 수행하는 방식(Click, Network req/res)  
+ 
+ ``` 개념 : 이벤트 루프, 태스크 큐, 백그라운드 ```  
+ 
+ 4) 논 블로킹 I/O  
+ - 이전 작업이 완료될 때까지 대기하지 않는다.
+ - 동시성 : 동시처리가 가능한 작업을 논 블로킹 처리해야 얻을 수 있다.  
+ ```동시 처리 가능한 작업들을 호출스택에 적당히 쌓고 백그라운드에서 I/O하다가 동시 처리 불가능 한 작업들을 처리하면 되겠구나!```  
+ 
+ 5) 스레드와 프로세스  
+ - 프로세스 : 운영체제에서 할당하는 작업 단위, 메모리 등 자원 공유 X
+ - 스레드 : 프로세스 내에서 실행되는 흐름의 단위. 부모 프로세스의 자원을 공유  
+ 
+ | 멀티 스레딩 | 멀티 프로세싱 |
+| -------- | ------------- |
+| 하나의 프로세스 안에서 여러개의 스레드 사용 | 여러개의 프로세스 사용 |
+| CPU작업이 많을 때 사용 | I/O 요청이 많을 때 사용 |
+| 프로그래밍이 어려움 | 덜 어려움 |
+
+### 1.2 서버로서의 노드  
+
+노드(자바스크립트)는 기본적으로 싱글스레드, 논 블로킹 모델을 사용한다.  
+=> I/O가 많은 곳에 이용하면 좋겠네. 작은 데이터를 빠르게 주고 받는 곳!
++ 웹 서버가 내장되어 있다 <img src="https://user-images.githubusercontent.com/42092864/136196525-dd8ced50-a9c9-48f5-92ab-4c6edd6603e2.png" width="50" height="50">
+
+
+
 
 ### 1.3 서버 외의 노드
 
-내용 placeholder
-
+결국 노드와 자바스크립트는 짱짱 세져서 지구를 정복했다..  
+```js
+{
+    "FE" : {"Angular", "React", "Vue"}
+    "Electorn": {"Atom","Slack","Discord"}
+}
+```
 ### 1.4 개발 환경 설정하기
 
-내용 placeholder
+(*열심히 개발환경을 설치하는 모습)
 
 ### 1.5 함께 보면 좋은 자료
 
-내용 placeholder
+:speak_no_evil:
 
 ## 3장
 
 ### 3.1 REPL 사용하기
 
-내용 placeholder
+자바스크립트는 *스크립트* 언어 이므로 미리 컴파일 하고 즉석에서 코드를 실행할 수 있습니다.
+REPL(Read, Eval, Print, Loop)
 
 ### 3.2 JS 파일 실행하기
+>helloWorld.js
+```js
+function helloWorld(){
+  console.log('hello world!');
+  helloNode();
+}
+function helloNode(){
+  console.log("hello node");
+}
 
-내용 placeholder
+helloWorld();
+```
+c,java 등에서 처럼 gcc/java를 이용하여 컴파일을 하지 않아도 실행이 되는구나!
 
 ### 3.3 모듈로 만들기
 
-내용 placeholder
+
