--- a/3주차/양준혁.md
+++ b/3주차/양준혁.md
@@ -192,8 +192,35 @@ function helloNode(){
 
 helloWorld();
 ```
-c,java 등에서 처럼 gcc/java를 이용하여 컴파일을 하지 않아도 실행이 되는구나!
+c,java 등에서 처럼 gcc/java를 이용하여 컴파일을 하지 않아도 실행이 되는구나!  
 
 ### 3.3 모듈로 만들기
+1) 모듈 만들어 내보내기  
+```js
+var app = express();
+function exportModule1(...){
+ // TODO Auto-generated method stub 
+}
+export function exportModule2(...) {
+   // TODO Auto-generated method stub 
+}
+...
+module.exports = exportModule1;
+export {exportModule1}
+export default {
+exportModule3(...){
+ // TODO Auto-generated method stub 
+}
+exportModule4(...){
+ // TODO Auto-generated method stub 
+}
+}
+```
 
+2) 모듈 가져와 사용하기  
+```js
+import {exportModule1} from "./User";
+
+exportModule1(param1)
+```
 
