--- a/3주차/양준혁.md
+++ b/3주차/양준혁.md
@@ -67,7 +67,7 @@ object2.onclick = () => {
 ![image](https://user-images.githubusercontent.com/42092864/136191118-4467a60b-0e6a-4592-a803-88bdb7ea9599.png)
 
 
-:suspect: \*sus\*
+:suspect:
 1) html을 이용하여 모달을 만들어본다
 ```html
 <!DOCTYPE html>
