--- a/발표/3주차.md
+++ b/발표/3주차.md
@@ -308,7 +308,7 @@ close.onclick = () => {
 
 ⇒ 논 블로킹과 동시가 같은 의미가 아니다. 동시성은 동시 처리가 가능한 작업을 논 블로킹 처리해야 얻을 수 있다는 점 알아두자!
 
-# 1.1.5 싱글 스레드
+### 1.1.5 싱글 스레드
 
 **싱글 스레드란?**
 
@@ -322,13 +322,13 @@ close.onclick = () => {
 <img src='./img/js0301.jpeg' width='800px' />
 노드가 싱글 스레드라는 말을 들어봤을 것이다. 하지만 엄밀히 말하면 싱글 스레드로 동작하지는 않는다. 노드를 실행하면 먼저 프로세스가 하나 생성된다. 그리고 그 프로세스에서 스레드들을 생성하는데, 이때 내부적으로 스레드를 여러 개 생성한다. 그중에서 직접 제어할 수 있는 스레드는 하나뿐이다. 그래서 흔히 노드가 싱글 스레드라고 여겨지는 것이다.
 
-# **1.2 서버로서의 노드**
+### **1.2 서버로서의 노드**
 
 <img src='./img/js0302.jpeg' width='800px' />
 
 → 노드 사용자들이 말하는 가장 큰 장점은 언어로 자바스크립트를 사용한다는 것이다. 웹 브라우저도 자바스크립트를 사용하므로 서버까지 노드를 사용하면 하나의 언어로 웹 사이트를 개발할 수 있다. 이로써 개발 생산성을 획기적으로 높였고, 생산성이 중요한 기업이 노드를 채택하는 이유가 되었다. 
 
-# 3.1 REPL 사용하기
+### 3.1 REPL 사용하기
 
 입력한 코드를 읽고(Read), 해석하고(Eval), 결과물을 반환하고(Print), 종료할 때까지 반복한다(Loop)고 해서 REPL(Read Eval Print Loop)이라고 부른다.
 
@@ -345,7 +345,7 @@ $ node
 - 긴 코드인 경우에는 코드를 자바스크립트 파일로 만든 후 파일을 통째로 실행하는 것이 좋다.
 
 
-# 3.2 JS 파일 실행하기
+### 3.2 JS 파일 실행하기
 
 - 콘솔에서 node [자바스크립트 파일 경로]로 실행한다. (확장자 .js 는 생략해도 된다.)
 
@@ -354,9 +354,9 @@ $ node
 파일이나 폴더의 이름에 쓸 수 없는 문자들이 있다. 대표적으로, /, \, |, <, >, :, ", ?, * 등이 있다. 파일이나 폴더를 만들 때 위 문자들은 피해서 이름짓자.
 
 
-# 3.3 모듈로 만들기
+### 3.3 모듈로 만들기
 
-### 모듈이란?
+## 모듈이란?
 
 : 특정한 기능을 하는 함수나 변수들의 집합이다.
 
