--- a/4주차/양준혁.md
+++ b/4주차/양준혁.md
@@ -1,7 +1,48 @@
+# 4주차 JS 스터디 정리
+
+| 장   | 제목          |
+| ---- | ------------- |
+| 책 3장 마무리 | 노드 기능 |
+| 책 4장 | http 모듈로 서버 만들기 |
+
+## 3장
+
+### 3.4 노드 내장 객체 알아보기
+#### 3.4.1 global
+#### 3.4.2 console
+#### 3.4.3 타이머
+#### 3.4.4 __filename, __dirname
+#### 3.4.5 module, exports, require
+#### 3.4.6 process
+### 3.5 노드 내장 모듈 사용하기
+#### 3.5.1 os
+#### 3.5.2 path
+#### 3.5.3 url
+#### 3.5.4 querystring
+#### 3.5.5 crypto
+#### 3.5.6 util
+#### 3.5.7 worker_threads
+#### 3.5.8 child_process
+#### 3.5.9 기타 모듈들
+### 3.6 파일 시스템 접근하기
+#### 3.6.1 동기 메서드와 비동기 메서드
+#### 3.6.2 버퍼와 스트림 이해하기
+#### 3.6.3 기타 fs 메서드 알아보기
+#### 3.6.4 스레드풀 알아보기
+### 3.7 이벤트 이해하기
+### 3.8 예외 처리하기
+#### 3.8.1 자주 발생하는 에러들
+### 3.9 함께 보면 좋은 자료
+
+
+## 4장
+
+### 4.1 요청과 응답 이해하기  
 
 ![image](https://user-images.githubusercontent.com/42092864/136838425-b72a3d97-a468-4ba3-94ce-c9347ead17ba.png)
+
 ```js
-createServer.js
+//createServer.js
 const http = require('http');
 
 http.createServer((req, res) => {
@@ -10,7 +51,7 @@ http.createServer((req, res) => {
 ```
 
 ```js
-server1.js
+//server1.js
 const http = require('http');
 
 http.createServer((req, res) => {
@@ -25,7 +66,7 @@ http.createServer((req, res) => {
 ```
 
 ```js
-server1-1.js
+//server1-1.js
 
 const http = require('http');
 
@@ -43,5 +84,49 @@ server.on('error', (error) => {
   console.error(error);
 });
 ```
+```js
+//server1-2.js
+const http = require('http');
+
+http.createServer((req, res) => {
+  res.writeHead(200, { 'Content-Type': 'text/html; charset=utf-8' });
+  res.write('<h1>Hello Node!</h1>');
+  res.end('<p>Hello Server!</p>');
+})
+  .listen(8080, () => { // 서버 연결
+    console.log('8080번 포트에서 서버 대기 중입니다!');
+  });
+
+http.createServer((req, res) => {
+  res.writeHead(200, { 'Content-Type': 'text/html; charset=utf-8' });
+  res.write('<h1>Hello Node!</h1>');
+  res.end('<p>Hello Server!</p>');
+})
+  .listen(8081, () => { // 서버 연결
+    console.log('8081번 포트에서 서버 대기 중입니다!');
+  });
+```
+```js
+//
+```
 ![image](https://user-images.githubusercontent.com/42092864/136842945-8f8f12db-6dd9-419f-9f6b-f3036945998a.png)
 ![image](https://user-images.githubusercontent.com/42092864/136843099-af737b94-58da-4124-a7c0-190cad367da5.png)
+### HTTP RESPONSE CODE
+---
+![image](https://user-images.githubusercontent.com/42092864/136843981-3118aa54-db83-4596-a100-9eb6f24fa80a.png)
+> https://ko.wikipedia.org/wiki/HTTP_%EC%83%81%ED%83%9C_%EC%BD%94%EB%93%9C  
+![image](https://user-images.githubusercontent.com/42092864/136844067-4586ab39-0432-4f16-8e92-700defc55801.png)
+### HTTP REQUEST METHODS
+![image](https://user-images.githubusercontent.com/42092864/136844233-fbd1cc15-86f5-43ab-9d9a-e04135532802.png)
+> https://developer.mozilla.org/ko/docs/Web/HTTP/Methods  
+![image](https://user-images.githubusercontent.com/42092864/136844280-bba223d0-e576-4760-b132-51676f572b85.png)
+
+> 
+
+### 4.2 REST와 라우팅 사용하기  
+### 4.3 쿠키와 세션 이해하기  
+### 4.4 https와 http2  
+### 4.5 cluster   
+### 4.6 함께 보면 좋은 자료  
+
+
