--- a/4주차/양준혁.md
+++ b/4주차/양준혁.md
@@ -38,8 +38,29 @@
 ## 4장
 
 ### 4.1 요청과 응답 이해하기  
+<br />
 
-![image](https://user-images.githubusercontent.com/42092864/136838425-b72a3d97-a468-4ba3-94ce-c9347ead17ba.png)
+- 요청 (Request) & 응답 (Response)
+
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/136838425-b72a3d97-a468-4ba3-94ce-c9347ead17ba.png)  
+<br />
+
+- 실제 웹 어플리케이션의 구성은 어떻게 되어 있을까?  
+<br />
+
+
+![image](https://user-images.githubusercontent.com/42092864/136991434-05c411e0-5344-4632-8c57-94e1517cbae9.png)
+<br />
+
+
+- createServer Method에 대하여  
+https://nodejs.org/ko/docs/guides/anatomy-of-an-http-transaction/
+
+<br />
+
+
 
 ```js
 //createServer.js
@@ -49,6 +70,9 @@ http.createServer((req, res) => {
   // 여기에 어떻게 응답할지 적습니다.
 });
 ```
+
+<br />
+
 
 ```js
 //server1.js
@@ -64,6 +88,34 @@ http.createServer((req, res) => {
   });
 
 ```
+
+<br />
+
+
+-  host  
+<br />
+
+> 네트워크 호스트(network host)는 컴퓨터 네트워크에 연결된 컴퓨터나 기타 장치이다. 네트워크 호스트는 정보 리소스, 서비스, 애플리케이션을 네트워크 상의 사용자나 기타 노드에 제공할 수 있다.
+>  네트워크 호스트는 네트워크 주소가 할당된 네트워크 노드이다.  
+<br />
+
+간단하게? host (주소) = 네트워크 (주소; Ip address) !  
+로컬호스트 = 루프백 아이피(127.0.0.1)
+<br />
+
+
+_...IP? ..._
+
+
+
+- port  
+
+같은 ip내에서 프로세스를 구분한다.  
+
+![image](https://user-images.githubusercontent.com/42092864/136998040-cc4a5a04-00ee-4fcc-b9f5-062218198abf.png)
+
+
+<br/>
 
 ```js
 //server1-1.js
@@ -84,6 +136,9 @@ server.on('error', (error) => {
   console.error(error);
 });
 ```
+
+<br />
+
 ```js
 //server1-2.js
 const http = require('http');
@@ -106,27 +161,80 @@ http.createServer((req, res) => {
     console.log('8081번 포트에서 서버 대기 중입니다!');
   });
 ```
+<br />
+
 ```js
 //
 ```
+<br />
+
+ !Warning 포트 충돌!<br />
+
 ![image](https://user-images.githubusercontent.com/42092864/136842945-8f8f12db-6dd9-419f-9f6b-f3036945998a.png)
+
+<br />
+
 ![image](https://user-images.githubusercontent.com/42092864/136843099-af737b94-58da-4124-a7c0-190cad367da5.png)
-### HTTP RESPONSE CODE
+
+<br />
+
+### HTTP RESPONSE CODE<br />
 ---
 ![image](https://user-images.githubusercontent.com/42092864/136843981-3118aa54-db83-4596-a100-9eb6f24fa80a.png)
-> https://ko.wikipedia.org/wiki/HTTP_%EC%83%81%ED%83%9C_%EC%BD%94%EB%93%9C  
+> https://ko.wikipedia.org/wiki/HTTP_%EC%83%81%ED%83%9C_%EC%BD%94%EB%93%9C   
+<br />
 ![image](https://user-images.githubusercontent.com/42092864/136844067-4586ab39-0432-4f16-8e92-700defc55801.png)
-### HTTP REQUEST METHODS
-![image](https://user-images.githubusercontent.com/42092864/136844233-fbd1cc15-86f5-43ab-9d9a-e04135532802.png)
-> https://developer.mozilla.org/ko/docs/Web/HTTP/Methods  
-![image](https://user-images.githubusercontent.com/42092864/136844280-bba223d0-e576-4760-b132-51676f572b85.png)
+<br />
+<br />
 
-> 
+### HTTP REQUEST METHODS <br />
+
+![image](https://user-images.githubusercontent.com/42092864/136844233-fbd1cc15-86f5-43ab-9d9a-e04135532802.png)
+
+<br />
+
+> https://developer.mozilla.org/ko/docs/Web/HTTP/Methods  
+
+<br />
+
+
+![image](https://user-images.githubusercontent.com/42092864/136844280-bba223d0-e576-4760-b132-51676f572b85.png)
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/136999916-503e2bc9-ae92-44fe-bf19-7b8595fd9a09.png)
+(HTTP 1.1)TCP IP 방식(localhost에서 연결을 거부:ERR_CONNECTION_REFUSED)
+<br />
+![image](https://user-images.githubusercontent.com/42092864/137001261-38f1bb3b-b3c4-4ffa-b3fa-b231e64f4802.png)
+<br />
+<br />
+
 
 ### 4.2 REST와 라우팅 사용하기  
+<br />
+
+REST?
+<br />
+
+<br />
+- REST는 REpresentational State Transfer의 줄임말  
+<br />
+> 그런 REST API로 괜찮은 가?
+https://www.youtube.com/watch?v=RP_f5dMoHFc  
+<br />
+<br />
+- Note ≡ res.end 앞에 return은 왜 붙이나요?  
+
+<br />
+- req.on('data')와 req.on('end')  
+>The on method binds an event to a object. It is a way to express your intent if there is something happening (data sent or error in your case) , then execute the function added as a parameter.  
+
+
+<br />
 ### 4.3 쿠키와 세션 이해하기  
 ### 4.4 https와 http2  
 ### 4.5 cluster   
 ### 4.6 함께 보면 좋은 자료  
-
+참고자료
+---
+- https://gmlwjd9405.github.io/2018/10/27/webserver-vs-was.html 
 
