--- a/4주차/양준혁.md
+++ b/4주차/양준혁.md
@@ -47,12 +47,7 @@
 ![image](https://user-images.githubusercontent.com/42092864/136838425-b72a3d97-a468-4ba3-94ce-c9347ead17ba.png)  
 <br />
 
-- 실제 웹 어플리케이션의 구성은 어떻게 되어 있을까?  
-<br />
 
-
-![image](https://user-images.githubusercontent.com/42092864/136991434-05c411e0-5344-4632-8c57-94e1517cbae9.png)
-<br />
 
 
 - createServer Method에 대하여  
@@ -180,11 +175,11 @@ http.createServer((req, res) => {
 
 ### HTTP RESPONSE CODE<br />
 ---
+
 ![image](https://user-images.githubusercontent.com/42092864/136843981-3118aa54-db83-4596-a100-9eb6f24fa80a.png)
+
 > https://ko.wikipedia.org/wiki/HTTP_%EC%83%81%ED%83%9C_%EC%BD%94%EB%93%9C   
-<br />
-![image](https://user-images.githubusercontent.com/42092864/136844067-4586ab39-0432-4f16-8e92-700defc55801.png)
-<br />
+
 <br />
 
 ### HTTP REQUEST METHODS <br />
@@ -202,9 +197,13 @@ http.createServer((req, res) => {
 <br />
 
 ![image](https://user-images.githubusercontent.com/42092864/136999916-503e2bc9-ae92-44fe-bf19-7b8595fd9a09.png)
+
 (HTTP 1.1)TCP IP 방식(localhost에서 연결을 거부:ERR_CONNECTION_REFUSED)
 <br />
+
 ![image](https://user-images.githubusercontent.com/42092864/137001261-38f1bb3b-b3c4-4ffa-b3fa-b231e64f4802.png)
+
+
 <br />
 <br />
 
@@ -218,19 +217,49 @@ REST?
 <br />
 - REST는 REpresentational State Transfer의 줄임말  
 <br />
-> 그런 REST API로 괜찮은 가?
-https://www.youtube.com/watch?v=RP_f5dMoHFc  
-<br />
-<br />
-- Note ≡ res.end 앞에 return은 왜 붙이나요?  
 
+> 그런 REST API로 괜찮은 가?
+ 
+https://www.youtube.com/watch?v=RP_f5dMoHFc  
+
+<br />
+<br />
+- res.end 앞에 return은 왜 붙이나요?  
+<br />
+함수의 끝을 명시하고 싶어서. res.end 하고 write/send/render 등 다시 response하는 경우 에러
 <br />
 - req.on('data')와 req.on('end')  
->The on method binds an event to a object. It is a way to express your intent if there is something happening (data sent or error in your case) , then execute the function added as a parameter.  
+<br />
 
+>The on method binds an event to a object. It is a way to express your intent if there is something happening (data sent or error in your case) , then execute the function added as a parameter.  
+<br />
+
+
+- header와 본문
+
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137003361-577fc984-6678-42a3-b96c-3d0e3874e6fa.png)  
+
+<br />
+
+
+- 실제 웹 어플리케이션의 구성은 어떻게 되어 있을까?  
+<br />
+
+
+![image](https://user-images.githubusercontent.com/42092864/136991434-05c411e0-5344-4632-8c57-94e1517cbae9.png)
+<br />
 
 <br />
 ### 4.3 쿠키와 세션 이해하기  
+<br />
+![image](https://user-images.githubusercontent.com/42092864/137003536-1442fde4-981e-4527-8927-b0b7bedadb29.png)
+<br />
+
+- 쿠키는 요청의 헤더(Cookie)에 담겨 전송  
+<br />
+
 ### 4.4 https와 http2  
 ### 4.5 cluster   
 ### 4.6 함께 보면 좋은 자료  
