--- a/4주차/이준석.md
+++ b/4주차/이준석.md
@@ -91,7 +91,7 @@ ex) deprecated, promisfy
  - 파일 폴더 CRUD 가능
  - 웹과 달리 권한을 갖는다.
 
-####버퍼와 스트림
+###버퍼와 스트림
  - 버퍼: 일정한 크기로 모아두는 데이터
  - 버퍼링: 버퍼에 데이터가 찰 때까지 모으는 작업
  - 스트림: 데이터의 흐름
@@ -136,12 +136,12 @@ REST란, HTTP URI를 통해 자원을 명시하고 HTTP 메서드(POST, GET, PUT
 - 매 요청마다 서버에 동봉해서 보냄
 - 서버는 쿠키를 읽어 누구인지 파악함
 
-####헤더와 본문
+###헤더와 본문
 <img src='./img/http요청응답_이준석.png' width='400px' />
  
  - 쿠키는 부가적인 정보이므로 헤더에 저장한다.
 
-####http 상태 코드
+###http 상태 코드
  요청이 성공인지 실패인지 알려줌
  - 2xx: 성공
  - 3xx: 리다이렉션
@@ -156,11 +156,11 @@ REST란, HTTP URI를 통해 자원을 명시하고 HTTP 메서드(POST, GET, PUT
 
 ### 4.4 https와 http2
 
-#### https
+### https
 웹 서버에 SSL 암호화를 추가하는 모듈
 - 오고가는 모든 데이터를 암호화한다.
 
-#### http2
+### http2
 SSL 암호화와 함께 최신 HTTP 프로토콜인 http/2를 사용하는 모듈
  - 요청 및 응답 방식이 기존보다 개선됨
  - 웹의 속도도 개선됨
