--- a/4주차/이준석.md
+++ b/4주차/이준석.md
@@ -104,14 +104,14 @@ fs
  - 노드는 프로세스/스레드를 멈춘다
  - 에러처리는 필수.
 
-### try catch문
+***try catch문***
 기본적으로 try catch 문으로 예외를 처리함
 - 에러가 생길만 한 곳을 try catch로 감싼다.
 
-### 노드의 비동기 메서드 에러처리
+***노드의 비동기 메서드 에러처리***
 콜백함수에서 에러 객체를 제공한다.
 
-### 프로미스의 에러
+***프로미스의 에러***
 따로 처리하지 않아도 된다.
 
 ---
@@ -156,11 +156,11 @@ REST란, HTTP URI를 통해 자원을 명시하고 HTTP 메서드(POST, GET, PUT
 
 ### 4.4 https와 http2
 
-*** https***
+***https***
 웹 서버에 SSL 암호화를 추가하는 모듈
 - 오고가는 모든 데이터를 암호화한다.
 
-*** http2***
+***http2***
 SSL 암호화와 함께 최신 HTTP 프로토콜인 http/2를 사용하는 모듈
  - 요청 및 응답 방식이 기존보다 개선됨
  - 웹의 속도도 개선됨
